# haskell-course

./: LICENSE  README.md  stack.yaml
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: BuildStructure.hs  CommandParser.hs  Commands.hs  FileSystemMod.hs  InteractiveIO.hs  Parser.hs
hw2/test/: CvsCommandTest.hs  FsCommandTest.hs  ParserTest.hs  SpecTest.hs
